--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "blockcode_to_js",
   "author": "wip",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
