--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "wip",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1"
   }
 }
