--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1"
+  },
+  "scripts": {
+    "start": "npm i && node index.js"
   }
 }
