--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "blockcode_to_js",
+  "name": "refactor-blockcode",
   "version": "1.0.0",
-  "description": "blockcode_to_js",
+  "description": "refactor-blockcode",
   "author": "wip",
   "dependencies": {
+    "boxen": "^5.0.0",
+    "chalk": "^4.1.0",
+    "figlet": "^1.5.0",
     "fs-extra": "^9.0.1",
-    "jsdom": "^16.4.0"
+    "inquirer": "^7.3.3",
+    "jsdom": "^16.4.0",
+    "yargs": "^16.2.0"
+  },
+  "main": "bin/index.js",
+  "bin": {
+    "refactor-blockcode": "./bin/index.js"
   },
   "scripts": {
     "start": "npm i && node index.js"
