--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
     "jsdom": "^16.4.0",
+    "terminal-link": "^2.1.1",
     "yargs": "^16.2.0"
   },
   "main": "bin/index.js",
