--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "refactor-blockcode inside xml documents",
     "author": "Cosnavel",
     "dependencies": {
+        "broken-link-checker": "^0.7.8",
         "chalk": "^4.1.0",
         "figlet": "^1.5.0",
         "fs-extra": "^9.0.1",
