added response time for broken link checker & added exit code handling & added detailed link output

--- a/package.json
+++ b/package.json
@@ -4,12 +4,29 @@
     "description": "refactor-blockcode inside xml documents",
     "author": "Cosnavel",
     "dependencies": {
-        "broken-link-checker": "^0.7.8",
+        "bhttp": "^1.2.1",
+        "calmcard": "~0.1.1",
         "chalk": "^4.1.0",
+        "condense-whitespace": "^1.0.0",
+        "default-user-agent": "^1.0.0",
+        "errno": "~0.1.4",
+        "extend": "^3.0.0",
         "figlet": "^1.5.0",
         "fs-extra": "^9.0.1",
+        "http-equiv-refresh": "^1.0.0",
         "inquirer": "^7.3.3",
+        "is-stream": "^1.0.1",
+        "is-string": "^1.0.4",
         "jsdom": "^16.4.0",
+        "limited-request-queue": "^2.0.0",
+        "link-types": "^1.1.0",
+        "maybe-callback": "^2.1.0",
+        "parse5": "^3.0.2",
+        "robot-directives": "~0.3.0",
+        "robots-txt-guard": "~0.1.0",
+        "robots-txt-parse": "~0.0.4",
+        "urlcache": "~0.7.0",
+        "urlobj": "0.0.11",
         "yargs": "^16.2.0"
     },
     "scripts": {
