--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "extend": "^3.0.0",
         "figlet": "^1.5.0",
         "fs-extra": "^9.0.1",
+        "highlight.js": "^10.6.0",
         "http-equiv-refresh": "^1.0.0",
         "inquirer": "^7.3.3",
         "is-stream": "^1.0.1",
