--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "robot-directives": "~0.3.0",
         "robots-txt-guard": "~0.1.0",
         "robots-txt-parse": "~0.0.4",
+        "turndown": "^7.1.1",
         "urlcache": "~0.7.0",
         "urlobj": "0.0.11",
         "yargs": "^16.2.0"
