--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "chalk": "^4.1.0",
         "condense-whitespace": "^1.0.0",
         "default-user-agent": "^1.0.0",
+        "dotenv": "^10.0.0",
         "errno": "~0.1.4",
         "extend": "^3.0.0",
         "figlet": "^1.5.0",
@@ -21,11 +22,13 @@
         "limited-request-queue": "^2.0.0",
         "link-types": "^1.1.0",
         "maybe-callback": "^2.1.0",
+        "minio": "^7.0.23",
         "parse5": "^3.0.2",
         "robot-directives": "~0.3.0",
         "robots-txt-guard": "~0.1.0",
         "robots-txt-parse": "~0.0.4",
         "turndown": "^7.1.1",
+        "turndown-plugin-gfm": "^1.0.2",
         "urlcache": "~0.7.0",
         "urlobj": "0.0.11",
         "yargs": "^16.2.0"
